# CleanFlow

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.de.md  README.md
.cargo/: config.toml
crates/cf-cli/: Cargo.toml
crates/cf-cli/src/: main.rs
crates/cf-core/: Cargo.toml
crates/cf-core/src/: db.rs  executor.rs  journal.rs  lib.rs  models.rs  planner.rs  scanner.rs
crates/cf-core/src/ai/: claude.rs  mod.rs  ollama.rs  prompts.rs
crates/cf-core/src/rules/: builtin.rs  engine.rs  mod.rs
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Dashboard/: Dashboard.tsx
frontend/src/components/Preview/: ActionItem.tsx  ActionPreview.tsx
frontend/src/components/Scanner/: ScanView.tsx
frontend/src/lib/: format.ts  tauri.ts
frontend/src/stores/: scanStore.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  state.rs
src-tauri/src/commands/: cleanup.rs  mod.rs  organize.rs  rules.rs  scan.rs  undo.rs
