[workspace]
members = [
    "crates/cf-core",
    "crates/cf-cli",
    "src-tauri",
]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"] }
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["v4", "serde"] }
thiserror   = "2"
anyhow      = "1"
tracing     = "0.1"
cf-core     = { path = "crates/cf-core" }
