[package]
name    = "cleanflow-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "cleanflow_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cleanflow-app"
path = "src/main.rs"

[dependencies]
cf-core    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }
keyring    = "3"

tauri            = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell       = "2"
tauri-plugin-dialog      = "2"
tauri-plugin-notification = "2"

[features]
default         = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
