[package]
name    = "cf-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }

walkdir    = "2"
rayon      = "1"
sha2       = "0.10"
hex        = "0.4"
infer      = "0.16"
regex      = "1"
glob       = "0.3"
keyring    = "3"
sled       = "0.34"
trash      = "5"

[dev-dependencies]
tempfile   = "3"
tokio      = { version = "1", features = ["full", "test-util"] }
